# oxigraph

./: .gitattributes  Cargo.toml  README.md  typos.toml
.github/workflows/: artifacts.yml  go.yml  install_rocksdb.sh  tests.yml
docs/: README.md
docs/contributors/: README.md
docs/contributors/explanation/: README.md  architecture.md  language-bindings.md
docs/contributors/how-to/: README.md  add-conformance-test.md  benchmarks.md  (+6 more)
docs/decisions/: 0001-embed-oxigraph-in-go-via-c-abi-ffi.md
docs/users/: README.md
go/: README.md  blank_node.go  blank_node_test.go  cgo_darwin_amd64.go  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_arm64.go  cgo_windows_amd64.go  doc.go  errors.go  go.mod  io.go  io_test.go  literal.go  literal_test.go  named_node.go  named_node_test.go  nquads.go  nquads_test.go  oxigraph_ffi.h  quad.go  quad_test.go  query.go  query_test.go  sparqljson.go  sparqljson_test.go  store.go  store_test.go  term.go  triple.go  update.go  update_test.go
go/features/: blank-node.feature  godog_test.go  io_steps_test.go  literal.feature  load-dump.feature  n-quads-lines.feature  named-node.feature  parsing_steps_test.go  quad.feature  query_steps_test.go  sparql-json-terms.feature  sparql-query.feature  sparql-update.feature  statement_steps_test.go  store-add-remove.feature  store-lifecycle.feature  store_steps_test.go  term-equality.feature  term_steps_test.go  triple.feature  updates_steps_test.go  world_test.go
go/lib/: README.md
oxigraph-ffi/: Cargo.toml  README.md  oxigraph_ffi.h
oxigraph-ffi/src/: lib.rs
oxrocksdb-sys/: build.rs
(+23 files in other folders)
